fix alignment when status has multiple lines

--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -127,6 +127,11 @@
   &__card {
     .link-white();
     .link-plain();
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     pointer-events: none;
 
     height: 100%;
